src/tests/routes/crates/versions/snapshots/crates_io__tests__routes__crates__versions__list__versions-2.snap
---
source: src/tests/routes/crates/versions/list.rs
expression: response.json()
---
{
  "meta": {
    "next_page": null,
    "total": 3
  },
  "versions": [
    {
      "audit_actions": [],
      "bin_names": null,
      "checksum": "                                                                ",
      "crate": "foo_versions",
      "crate_size": 0,
      "created_at": "[datetime]",
      "description": null,
      "dl_path": "/api/v1/crates/foo_versions/1.0.0/download",
      "documentation": null,
      "downloads": 0,
      "edition": null,
      "features": {},
      "has_lib": null,
      "homepage": null,
      "id": 2,
      "lib_links": null,
      "license": null,
      "links": {
        "authors": "/api/v1/crates/foo_versions/1.0.0/authors",
        "dependencies": "/api/v1/crates/foo_versions/1.0.0/dependencies",
        "version_downloads": "/api/v1/crates/foo_versions/1.0.0/downloads"
      },
      "num": "1.0.0",
      "published_by": null,
      "readme_path": "/api/v1/crates/foo_versions/1.0.0/readme",
      "repository": null,
      "rust_version": "1.64",
      "trustpub_data": null,
      "updated_at": "[datetime]",
      "yank_message": null,
      "yanked": false
    },
    {
      "audit_actions": [],
      "bin_names": null,
      "checksum": "                                                                ",
      "crate": "foo_versions",
      "crate_size": 0,
      "created_at": "[datetime]",
      "description": null,
      "dl_path": "/api/v1/crates/foo_versions/0.5.1/download",
      "documentation": null,
      "downloads": 0,
      "edition": null,
      "features": {},
      "has_lib": null,
      "homepage": null,
      "id": 1,
      "lib_links": null,
      "license": null,
      "links": {
        "authors": "/api/v1/crates/foo_versions/0.5.1/authors",
        "dependencies": "/api/v1/crates/foo_versions/0.5.1/dependencies",
        "version_downloads": "/api/v1/crates/foo_versions/0.5.1/downloads"
      },
      "num": "0.5.1",
      "published_by": {
        "avatar": null,
        "id": 1,
        "login": "foo",
        "name": null,
        "url": "https://github.com/foo"
      },
      "readme_path": "/api/v1/crates/foo_versions/0.5.1/readme",
      "repository": null,
      "rust_version": null,
      "trustpub_data": null,
      "updated_at": "[datetime]",
      "yank_message": null,
      "yanked": false
    },
    {
      "audit_actions": [],
      "bin_names": null,
      "checksum": "                                                                ",
      "crate": "foo_versions",
      "crate_size": 0,
      "created_at": "[datetime]",
      "description": null,
      "dl_path": "/api/v1/crates/foo_versions/0.5.0/download",
      "documentation": null,
      "downloads": 0,
      "edition": null,
      "features": {},
      "has_lib": null,
      "homepage": null,
      "id": 3,
      "lib_links": null,
      "license": null,
      "links": {
        "authors": "/api/v1/crates/foo_versions/0.5.0/authors",
        "dependencies": "/api/v1/crates/foo_versions/0.5.0/dependencies",
        "version_downloads": "/api/v1/crates/foo_versions/0.5.0/downloads"
      },
      "num": "0.5.0",
      "published_by": {
        "avatar": null,
        "id": 1,
        "login": "foo",
        "name": null,
        "url": "https://github.com/foo"
      },
      "readme_path": "/api/v1/crates/foo_versions/0.5.0/readme",
      "repository": null,
      "rust_version": null,
      "trustpub_data": null,
      "updated_at": "[datetime]",
      "yank_message": null,
      "yanked": false
    }
  ]
}
